Fixed a syntax error, improved picture cutoff
Added a flex-wrap on picture row to ensure pictures don't cutoff

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,9 @@ button{
 /* Make the picture row a flexbox */
 .picture-row{
     display: flex;
+    gap: 8px;
+    flex-wrap: wrap; /* Added this to get first picture not to cutoff */
+    justify-content: center;
 }
 
 /* .picture-row, .headshot1-text img{
